k8s/04-mysql-service-headless.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
  namespace: todo-app
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
