k8s/08-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: todo-app
spec:
  selector:
    app: backend-api
  ports:
  - port: 8080
    targetPort: 8080
