k8s/10-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: todo-app
spec:
  type: NodePort
  selector:
    app: frontend-app
  ports:
  - port: 80
    targetPort: 80
